# my_package

./: README.md  pyproject.toml
docs/source/: conf.py  index.rst
my_package/: first_module.py
my_package/subpackage/: second_module.py  third_module.py
tests/: test_first_module.py
tests/test_subpackage/: test_second_module.py
