# This is a file that will install dependencies etc.

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
version = "0.1.0"
dependencies = [
    "numpy>=1.21.0",
    "pytest==6.2.4",
    "matplotlib",
    "filehandling @ git+https://github.com/mikesmithlab/filehandling.git"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
